--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,4 +1,4 @@
-name: Publish PR preview to GitHub Pages
+name: Publish PR preview to GitHub Pages for local branches only
 
 on:
   pull_request:
@@ -15,6 +15,8 @@ concurrency: pr-preview-${{ github.ref }}
 
 jobs:
   build:
+    # Do not run if PR is from fork
+    if: ${{ ! github.event.pull_request.head.repo.fork }}
     permissions:
       actions: write
       checks: write
